[package]
name = "route-rs"
description = "A simple route planner"
keywords = ["route", "planner", "piston", "piston_window"]
version = "0.1.0"
edition = "2021"
authors = ["Tetie"]
rust-version = "1.68.1"
readme = "README.md"
repository = "https://github.com/tetiewastaken/route-rs/"
license = "Apache-2.0"

[dependencies]
piston = "0.53.2"
piston_window = "0.128.0"
piston2d-graphics = "0.43.0"
piston2d-opengl_graphics = "0.82.0"
pistoncore-sdl2_window = "0.68.0"
serde = { version = "1", features = ["derive"] }
csv = "1.1"
lazy_static = "1.4.0"